# opproplot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  api.md  getting_started.md  pyproject.toml
.cache/matplotlib/: fontlist-v390.json
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: _config.yml  api.md  examples.md  getting_started.md  index.md  roadmap.md  theory.md
scripts/: generate_docs_images.py
src/opproplot/: __init__.py  core.py  plotting.py
tests/: test_core.py
