[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opproplot"
version = "0.1.0"
description = "Operating profile plots: score histograms + TPR/FPR/accuracy vs threshold for binary classifiers."
authors = [
  { name = "Mike Roth" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "matplotlib",
]

[project.urls]
Homepage = "https://github.com/<your-username>/opproplot"

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I"]
